--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ body {
     position: relative;
 }
 
+.fa-shopping-cart {
+    margin-right:20px;
+}
+
 @media (min-width: 1000px) {
     .dropdown-menu[data-bs-popper]{
         margin-right: 10%;
@@ -95,6 +99,15 @@ body {
     }
 }
 
+
+.btn-secondary {
+    max-width:100px;
+    font-size: 12px;
+    padding:unset;
+    position:absolute;
+    right:10px;
+    bottom:10px;
+}
 
 
 
