--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     position: relative;
     font-family: Arial;
 }
+
+
 .imgTitle{
     background-image: url("./images/banner.png");
     height: 50vh;
@@ -13,10 +15,7 @@ body {
     background-image: url("./images/bannerReg.png");
     height: 20vh;
 }
-.imgReg{
-    background-image: url("./images/bannerReg.png");
-    height: 20vh;
-}
+
 .fas{
     font-size: 36px;
     color: white;
@@ -55,16 +54,12 @@ body {
     display: block;
 }
 
+
 .selecMoment{
     margin-top: 3%;
     margin-bottom: 5%;
     width: 100%;
     border-bottom: solid black ;
-}
-
-.fas{
-    font-size: 36px;
-    color: white;
 }
 .reservBtn{
     margin-bottom: 15%;
@@ -208,4 +203,24 @@ body {
 /* template création d'article */
 .new-article > .form-group {
     margin-bottom:10px;
+}
+/*********************************************************PAGE PAIEMENT************************************************/
+.btn{
+    margin-top: 50px;
+    margin-left: 250px;
+    margin-bottom: 50px;
+    width: 100px;
+}
+
+.container{
+    margin-top: 50px;
+    border: 1px solid #e28383;
+    border-radius: 10%;
+    background: linear-gradient(#e66465, #9198e5);
+
+}
+
+.row{
+    display: flex;
+    justify-content: center;
 }
