--- a/style.css
+++ b/style.css
@@ -2,89 +2,92 @@ body {
     position: relative;
     font-family: Arial;
 }
-
-
-.imgTitle{
-    background-image: url("./images/banner.png");
-    height: 50vh;
-}
-.imgReg{
-    background-image: url("./images/bannerReg.png");
-    height: 20vh;
-}
-.imgCon{
-    background-image: url("./images/bannerCon.png");
-    height: 20vh;
-}
-.bannerTitle{
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 100%;
-    display: block;
-}
-
-
-.selecMoment{
-    margin-top: 3%;
-    margin-bottom: 5%;
-    width: 100%;
-    border-bottom: solid black ;
-}
-.reservBtn{
-    margin-bottom: 15%;
-    font-size: 30px;
-    height: 60%;
-    width: 100%;
-    font-style: italic;
-}
-.selecMoment h2{
-    font-size: 60px;
-    font-style: italic;
-    font-weight: bolder;
-}
-.imageCard{
-    height: 230px;
-}
-
-.cardMoment{
-    margin: 15px auto 5em auto;
-}
-.submit{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40%;
-}
-.forms{
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 1em;
-    box-shadow: 5px 5px 5px 5px #BFBFBF ;
-    padding: 10px;
-}
-.form-label{
-    font-size: 20px;
-}
-
 #formCon{
     margin-top: 2em;
 }
 
 .sidebar:hover{
     background-color: #F79405;
-}.fas{
+}
+.fas{
+    font-size: 36px;
+    color: white;
+ }
+.sidebarclass{
+    background-color: white;
+    border: solid grey;
+}
+
+.titleSideBar{
+    height: 30%;
+    background-image: url("./images/madras.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.sidebarBody{
+    height: 80%;
+    display: block;
+    background-color: #F79405;
+    margin: 15% 5% 40% 5%;
+}
+
+.fas{
     font-size: 36px;
     color: white;
 }
 .dropdown{
     position: relative;
 }
-
-.fa-shopping-cart {
-    margin-right:20px;
+.leftSideBar{
+    width: 20%;
+}
+/* template création d'article */
+.new-article > .form-group {
+    margin-bottom:10px;
 }
 
+/********* css carte user *****************************/
+
+.cardUser{
+    margin-top: -20%;
+    margin-left: 20%;
+    width: 40%;
+    background-color: #efefef;
+    cursor: pointer;
+    transition: all 0.5s
+}
+.image imgCard {
+    transition: all 0.5s
+}
+.card:hover .image img {
+    transform: scale(1.5)
+}
+.btnCardUser {
+    height: 140px;
+    width: 140px;
+    border-radius: 50%
+}
+.name {
+    font-size: 22px;
+    font-weight: bold
+}
+.idd {
+    font-size: 12px
+}
+.btn1 {
+    height: 40px;
+    width: 150px;
+    border: none;
+    background-color: #000;
+    color: #aeaeae;
+    font-size: 15px
+}
+/* template création d'article */
+.new-article > .form-group {
+    margin-bottom:10px;
+}
+/*********************** les médias restent en bas du fichier*****************/
 @media (min-width: 1000px) {
     .dropdown-menu[data-bs-popper]{
         margin-right: 10%;
@@ -100,18 +103,4 @@ body {
 }
 
 
-.btn-secondary {
-    max-width:100px;
-    font-size: 12px;
-    padding:unset;
-    position:absolute;
-    right:10px;
-    bottom:10px;
-}
 
-
-
-/* template création d'article */
-.new-article > .form-group {
-    margin-bottom:10px;
-}
