--- a/style.css
+++ b/style.css
@@ -226,6 +226,7 @@ body {
     border: 1px solid #e28383;
     border-radius: 50px;
     background: linear-gradient(#e66465, #9198e5);
+    margin-left: 250px;
 }
 
 .rowPaiement{
