--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@ body {
 #formCon{
     margin-top: 2em;
 }
+
+.sidebar:hover{
+    background-color: #F79405;
+}
+.imgReg{
+    background-image: url("./images/bannerReg.png");
+    height: 20vh;
+}
 .imgReg{
     background-image: url("./images/bannerReg.png");
     height: 20vh;
@@ -47,11 +55,24 @@ body {
     height: 20vh;
 }
 
+.titleSideBar{
+    height: 30%;
+    background-image: url("./images/madras.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 .bannerTitle{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 100%;
     display: block;
+}
+
+.sidebarBody{
+    height: 80%;
+    display: block;
+    background-color: #F79405;
+    margin: 15% 5% 40% 5%;
 }
 
 
@@ -60,6 +81,11 @@ body {
     margin-bottom: 5%;
     width: 100%;
     border-bottom: solid black ;
+}
+
+.fas{
+    font-size: 36px;
+    color: white;
 }
 .reservBtn{
     margin-bottom: 15%;
@@ -76,7 +102,9 @@ body {
 .dropdown{
     position: relative;
 }
-
+.leftSideBar{
+    width: 20%;
+}
 .imageCard{
     height: 230px;
 }
@@ -134,6 +162,7 @@ body {
     margin-top: -50%;
 }
 .cardUser{
+    margin-top: -20%;
     margin-left: 20%;
     width: 40%;
     background-color: #efefef;
@@ -168,6 +197,9 @@ body {
     color: #aeaeae;
     font-size: 15px
 }
+
+
+
 
 /* template création d'article */
 .new-article > .form-group {
@@ -204,23 +236,24 @@ body {
 .new-article > .form-group {
     margin-bottom:10px;
 }
+
 /*********************************************************PAGE PAIEMENT************************************************/
-.btn{
+.btnPaiement{
     margin-top: 50px;
     margin-left: 250px;
     margin-bottom: 50px;
-    width: 100px;
+    width: 100px;   
 }
 
-.container{
+.containerPaiement{
     margin-top: 50px;
     border: 1px solid #e28383;
-    border-radius: 10%;
+    border-radius: 50px;
     background: linear-gradient(#e66465, #9198e5);
-
 }
 
-.row{
+.rowPaiement{
     display: flex;
     justify-content: center;
+
 }
