--- a/style.css
+++ b/style.css
@@ -2,18 +2,12 @@ body {
     position: relative;
     font-family: Arial;
 }
-
-
 .imgTitle{
     background-image: url("./images/banner.png");
     height: 50vh;
 }
 #formCon{
     margin-top: 2em;
-}
-
-.sidebar:hover{
-    background-color: #F79405;
 }
 .imgReg{
     background-image: url("./images/bannerReg.png");
@@ -27,35 +21,39 @@ body {
     font-size: 36px;
     color: white;
  }
+/********************************** sidebar ***********************************/
 .sidebarclass{
-    background-color: white;
-    border: solid grey;
+    background-color: #F79405;
+    margin-bottom: 0;
 }
+.titleSideBar{
+    margin: auto;
+    text-align: center;
+    height: 3%;
+    padding-top: 20%;
+    padding-bottom: 20%;
+}
+.sidebar:hover{
+    background-color: white;
+}
+
+.leftSideBar{
+    width: 20%;
+}
+
+/**********************************  ***********************************/
+
 .imgCon{
     background-image: url("./images/bannerCon.png");
     height: 20vh;
 }
 
-.titleSideBar{
-    height: 30%;
-    background-image: url("./images/madras.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-}
 .bannerTitle{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 100%;
     display: block;
 }
-
-.sidebarBody{
-    height: 80%;
-    display: block;
-    background-color: #F79405;
-    margin: 15% 5% 40% 5%;
-}
-
 
 .selecMoment{
     margin-top: 3%;
@@ -83,9 +81,7 @@ body {
 .dropdown{
     position: relative;
 }
-.leftSideBar{
-    width: 20%;
-}
+
 .imageCard{
     height: 230px;
 }
@@ -136,9 +132,13 @@ body {
 
 
 /********* css carte user *****************************/
-
+.infoUser{
+    width: 100%;
+}
+.infoUserBody{
+    margin-top: -50%;
+}
 .cardUser{
-    margin-top: -20%;
     margin-left: 20%;
     width: 40%;
     background-color: #efefef;
@@ -173,9 +173,6 @@ body {
     color: #aeaeae;
     font-size: 15px
 }
-
-
-
 
 /* template création d'article */
 .new-article > .form-group {
