--- a/style.css
+++ b/style.css
@@ -2,30 +2,58 @@ body {
     position: relative;
     font-family: Arial;
 }
+.imgProfil{
+    text-align: center;
+    padding-top: 10%;
+    padding-bottom: 20%;
+    margin-left: 40%;
+}
+/************************* start bannière *************************/
+
+.bannerTitle{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 100%;
+    display: block;
+}
 .imgTitle{
     background-image: url("./images/banner.png");
     height: 50vh;
-}
-#formCon{
-    margin-top: 2em;
-}
-.imgReg{
-    background-image: url("./images/bannerReg.png");
-    height: 20vh;
 }
 .imgReg{
     background-image: url("./images/bannerReg.png");
     height: 20vh;
 }
 
+.imgCon{
+    background-image: url("./images/bannerCon.png");
+    height: 20vh;
+}
+/************************* end bannière *************************/
+
+#formCon{
+    margin-top: 2em;
+}
+
+
+/************************* start icon login *************************/
 .fas{
     font-size: 36px;
     color: white;
  }
-/********************************** sidebar ***********************************/
+.dropdown{
+    position: relative;
+}
+
+/************************* end icon login *************************/
+
+/************************* start sidebar *************************/
 .sidebarclass{
     background-color: #F79405;
     margin-bottom: 0;
+}
+.sidebar{
+    color: white;
 }
 .titleSideBar{
     margin: auto;
@@ -36,25 +64,24 @@ body {
 }
 .sidebar:hover{
     background-color: white;
+    color: #F79405;
 }
 
 .leftSideBar{
     width: 20%;
 }
+/************************* end sidebar *************************/
 
-/**********************************  ***********************************/
+/****************** start bouton page index ********************/
 
-.imgCon{
-    background-image: url("./images/bannerCon.png");
-    height: 20vh;
+.reservBtn{
+    margin-bottom: 15%;
+    font-size: 30px;
+    height: 60%;
+    width: 100%;
+    font-style: italic;
 }
-
-.bannerTitle{
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 100%;
-    display: block;
-}
+/****************** end bouton page index ********************/
 
 .selecMoment{
     margin-top: 3%;
@@ -63,38 +90,26 @@ body {
     border-bottom: solid black ;
 }
 
-.fas{
-    font-size: 36px;
-    color: white;
-}
-.reservBtn{
-    margin-bottom: 15%;
-    font-size: 30px;
-    height: 60%;
-    width: 100%;
-    font-style: italic;
-}
 .selecMoment h2{
     font-size: 60px;
     font-style: italic;
     font-weight: bolder;
 }
-.dropdown{
-    position: relative;
-}
 
+/****************** start card ********************/
 .imageCard{
     height: 230px;
-}
-
-/* template création d'article */
-.new-article > .form-group {
-    margin-bottom:10px;
 }
 
 .cardMoment{
     margin: 15px auto 5em auto;
 }
+.fa-shopping-cart {
+    margin-right:20px;
+}
+/****************** end card ********************/
+
+/****************** start css formulaires ********************/
 .submit{
     display: block;
     margin-left: auto;
@@ -109,37 +124,23 @@ body {
     box-shadow: 5px 5px 5px 5px #BFBFBF ;
     padding: 10px;
 }
-.form-label{
-    font-size: 20px;
-}
-
 #formCon{
     margin-top: 2em;
 }
-.sidebar:hover{
-    background-color: #F79405;
-}.fas{
-     font-size: 36px;
-     color: white;
- }
-
-.dropdown{
-    position: relative;
+.form-label{
+    font-size: 20px;
 }
-.fa-shopping-cart {
-    margin-right:20px;
-}
+/****************** end css formulaires ********************/
 
-
-
-/********* css carte user *****************************/
+/********* start css carte user *****************************/
 .infoUser{
     width: 100%;
 }
 .infoUserBody{
-    margin-top: -50%;
+    width: 60%;
 }
 .cardUser{
+    margin-top: 10%;
     margin-left: 20%;
     width: 40%;
     background-color: #efefef;
@@ -174,27 +175,12 @@ body {
     color: #aeaeae;
     font-size: 15px
 }
+/********* end css carte user *****************************/
 
-/* template création d'article */
+/********* start css article *****************************/
 .new-article > .form-group {
     margin-bottom:10px;
 }
-/*********************** les médias restent en bas du fichier*****************/
-@media (min-width: 1000px) {
-    .dropdown-menu[data-bs-popper]{
-        margin-right: 10%;
-        position: absolute;
-        right: 0;
-        left:inherit;
-    }
-}
-@media (max-width: 999px) {
-    .dropdown-menu[data-bs-popper]{
-        width: 30%;
-    }
-}
-
-
 .more {
     max-width:100px;
     font-size: 12px;
@@ -203,15 +189,9 @@ body {
     right:10px;
     bottom:10px;
 }
+/********* end css article *****************************/
 
-
-
-/* template création d'article */
-.new-article > .form-group {
-    margin-bottom:10px;
-}
-
-/*********************************************************PAGE PAIEMENT************************************************/
+/********************* start PAGE PAIEMENT *******************/
 .btnPaiement{
     margin-top: 50px;
     margin-left: 250px;
@@ -231,3 +211,36 @@ body {
     justify-content: center;
 
 }
+/********************* end PAGE PAIEMENT *******************/
+
+/****************** start accès page réservation ***********/
+.access{
+    font-weight: bold;
+    width: 600px;
+    height: 250px;
+    margin: 200px auto;
+    background: white;
+    border-radius: 3px;
+    box-shadow: 0 0 10px rgba(0,0,0, .4);
+    text-align: center;
+    padding-top: 1px;
+
+}
+/****************** end accès page réservation ***********/
+
+/*********************** start médias queries *****************/
+@media (min-width: 1000px) {
+    .dropdown-menu[data-bs-popper]{
+        margin-right: 10%;
+        position: absolute;
+        right: 0;
+        left:inherit;
+    }
+}
+@media (max-width: 999px) {
+    .dropdown-menu[data-bs-popper]{
+        width: 30%;
+    }
+}
+
+/*********************** end médias queries *****************/
