--- a/style.css
+++ b/style.css
@@ -167,7 +167,9 @@ body {
     font-size: 12px
 }
 .btn1 {
-    height: 40px;
+    padding: 7px;
+    text-decoration: none;
+    text-align: center;
     width: 150px;
     border: none;
     background-color: #000;
