--- a/style.css
+++ b/style.css
@@ -278,3 +278,7 @@ body {
 }
 
 /*********************** end médias queries *****************/
+
+
+/************************************************* AVIS ***************************************************************/
+
